--- a/package.json
+++ b/package.json
@@ -1,22 +1,64 @@
 {
-  "name": "h5barrage",
+  "name": "m.panda.tv",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/daijinma/H5Barrage.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/daijinma/H5Barrage/issues"
-  },
-  "homepage": "https://github.com/daijinma/H5Barrage#readme",
+  "author": "fwon",
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "autoprefixer-loader": "^3.2.0",
+    "babel-core": "^6.11.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-runtime": "^6.11.6",
+    "browser-sync": "^2.13.0",
+    "css-loader": "^0.23.1",
+    "cssnext-loader": "^1.0.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "gulp": "^3.8.10",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-clean": "0.3.1",
+    "gulp-concat": "2.6.0",
+    "gulp-connect": "2.2.0",
+    "gulp-css-base64": "^1.3.2",
+    "gulp-css-spriter": "^0.3.3",
+    "gulp-cssmin": "0.1.7",
+    "gulp-file-include": "0.13.7",
+    "gulp-include-tag": "^1.1.2",
+    "gulp-less": "3.0.3",
+    "gulp-md5-plus": "0.1.8",
+    "gulp-open": "1.0.0",
+    "gulp-px2rem": "^1.0.10",
+    "gulp-sequence": "^0.4.5",
+    "gulp-uglify": "1.4.2",
+    "gulp-util": "~2.2.9",
+    "gulp-watch": "4.1.0",
+    "html-loader": "^0.4.3",
+    "html-webpack-plugin": "^2.22.0",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
+    "postcss-loader": "^0.11.0",
+    "px2rem-loader": "^0.1.7",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "vue-hot-reload-api": "^1.3.3",
+    "vue-html-loader": "^1.2.3",
+    "vue-loader": "^8.5.2",
+    "vue-style-loader": "^1.0.0",
+    "webpack": "^1.13.1"
+  },
+  "main": "gulpfile.js",
+  "scripts": {
+    "server": "node server",
+    "build": "webpack --progress --colors"
+  },
+  "license": "ISC",
+  "dependencies": {
+    "babel-plugin-transform-runtime": "^6.12.0",
+    "comment-core-library": "^0.9.2",
+    "jquery": "^3.1.0",
+    "vue": "^1.0.26",
+    "vue-lazyload-img": "^0.1.5",
+    "vue-resource": "^0.9.3",
+    "vue-swipe": "^0.2.6"
   }
 }
