--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "m.panda.tv",
+  "name": "zhihuDaily",
   "version": "1.0.0",
-  "author": "fwon",
+  "author": "daijinma",
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.11.4",
@@ -14,24 +14,6 @@
     "cssnext-loader": "^1.0.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
-    "gulp": "^3.8.10",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-clean": "0.3.1",
-    "gulp-concat": "2.6.0",
-    "gulp-connect": "2.2.0",
-    "gulp-css-base64": "^1.3.2",
-    "gulp-css-spriter": "^0.3.3",
-    "gulp-cssmin": "0.1.7",
-    "gulp-file-include": "0.13.7",
-    "gulp-include-tag": "^1.1.2",
-    "gulp-less": "3.0.3",
-    "gulp-md5-plus": "0.1.8",
-    "gulp-open": "1.0.0",
-    "gulp-px2rem": "^1.0.10",
-    "gulp-sequence": "^0.4.5",
-    "gulp-uglify": "1.4.2",
-    "gulp-util": "~2.2.9",
-    "gulp-watch": "4.1.0",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.22.0",
     "less": "^2.7.1",
@@ -44,9 +26,9 @@
     "vue-html-loader": "^1.2.3",
     "vue-loader": "^8.5.2",
     "vue-style-loader": "^1.0.0",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.15.1"
   },
-  "main": "gulpfile.js",
   "scripts": {
     "server": "node server",
     "build": "webpack --progress --colors"
@@ -54,8 +36,6 @@
   "license": "ISC",
   "dependencies": {
     "babel-plugin-transform-runtime": "^6.12.0",
-    "comment-core-library": "^0.9.2",
-    "jquery": "^3.1.0",
     "vue": "^1.0.26",
     "vue-lazyload-img": "^0.1.5",
     "vue-resource": "^0.9.3",
