--- a/package.json
+++ b/package.json
@@ -33,12 +33,15 @@
     "server": "node server",
     "build": "webpack --progress --colors"
   },
+  "main": "app.js",
   "license": "ISC",
   "dependencies": {
     "babel-plugin-transform-runtime": "^6.12.0",
     "vue": "^1.0.26",
-    "vue-lazyload-img": "^0.1.5",
+    "vue-lazyload-img": "^0.1.6",
     "vue-resource": "^0.9.3",
-    "vue-swipe": "^0.2.6"
+    "vue-router": "^0.7.13",
+    "vue-swipe": "^0.2.6",
+    "vuex": "^1.0.0-rc.2"
   }
 }
