--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "html-webpack-plugin": "^2.22.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
+    "node-sass": "^3.10.0",
     "postcss-loader": "^0.11.0",
     "px2rem-loader": "^0.1.7",
+    "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "vue-hot-reload-api": "^1.3.3",
